<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.userprofile.UserProfileFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/place_detail_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_user_profile"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_account_circle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_profile_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_user_profile"
                tools:text="Jhon Doe" />

            <TextView
                android:id="@+id/tv_description_user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_profile_user"
                tools:text="User description" />

            <LinearLayout
                android:id="@+id/lyt_user_numbers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:weightSum="100"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_description_user"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="33"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_user_photos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/holo_green_dark"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="99" />

                    <TextView
                        android:id="@+id/tv_description_user_photos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/photos_txt"
                        android:textColor="@android:color/secondary_text_light"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="33"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_user_collections"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/holo_green_dark"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="99" />

                    <TextView
                        android:id="@+id/tv_description_user_collections"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/collections_text"
                        android:textColor="@android:color/secondary_text_light"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="33"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_user_likes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/holo_green_dark"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="99" />

                    <TextView
                        android:id="@+id/tv_description_user_likes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/likes_text"
                        android:textColor="@android:color/secondary_text_light"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/iv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingRight="5dp"
                android:src="@drawable/ic_location"
                app:layout_constraintRight_toLeftOf="@id/tv_location"
                app:layout_constraintTop_toBottomOf="@id/lyt_user_numbers"
                app:tint="@android:color/black"
                android:contentDescription="@string/image_location" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="5dp"
                android:textColor="@android:color/holo_green_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toRightOf="@id/iv_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lyt_user_numbers"
                tools:text="City, Country" />

            <LinearLayout
                android:id="@+id/lyt_social_media"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:paddingStart="70dp"
                android:paddingEnd="70dp"
                android:weightSum="100"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_location">

                <ImageView
                    android:id="@+id/iv_facebook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="25"
                    android:saveEnabled="false"
                    android:src="@drawable/ic_facebook_icon"
                    android:contentDescription="@string/image_facebook" />

                <ImageView
                    android:id="@+id/iv_twitter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="25"
                    android:src="@drawable/ic_twitter_icon"
                    android:contentDescription="@string/image_twitter"/>

                <ImageView
                    android:id="@+id/iv_linkedin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="25"
                    android:src="@drawable/ic_linkedin_icon"
                    android:contentDescription="@string/image_linkedin"/>

                <ImageView
                    android:id="@+id/iv_instagram"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="25"
                    android:src="@drawable/ic_instagram_icon"
                    android:contentDescription="@string/image_instagram"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/photos_text_mayus"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lyt_social_media" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_user_photos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:padding="4dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                app:spanCount="2"
                tools:listitem="@layout/item_user_image_list" />

            <LinearLayout
                android:id="@+id/progress_user_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/pickerColorBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center" />
            </LinearLayout>

            <TextView
                android:id="@+id/no_result_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_search_96dp"
                android:text="@string/no_result"
                android:textColor="@android:color/black"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>